tests/src/frontend/typechecking/invalid/inherit_params_1.sk
base class A final {f: Int}
base class B{g: Int}
class C extends A, B
